--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,25 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+# Underglow configs
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
-# Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+# Display configs
+CONFIG_ZMK_EXT_POWER=y # optional
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM=y
+
+# Backlit configs
+# CONFIG_ZMK_BACKLIGHT=y
+# CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+
+# Make Bluetooth stronger
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Set deep sleep to 30 minutes
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
+# Change board name
+CONFIG_ZMK_KEYBOARD_NAME="CEFV Corne"
+
