--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,11 +1,11 @@
 # Underglow configs
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 # Display configs
-CONFIG_ZMK_EXT_POWER=y # optional
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM=y
 
