--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,9 +1,8 @@
 # Underglow configs
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_WS2812_STRIP=y
+# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+# CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 
 # Display configs
 CONFIG_ZMK_DISPLAY=y
@@ -28,3 +27,4 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # Change board name
 CONFIG_ZMK_KEYBOARD_NAME="CEFV Corne"
+
