--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,8 +1,8 @@
 # Underglow configs
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-# CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 # Display configs
